V0.3.4 Release
- Fixed integrations not being detected.
- Added color customization (refer to https://htmlcolorcodes.com/bukkit-color-codes/) for plugin tag and mailbox name (see config.yml).
- Removed unnecessary console messages.
- Performed a few changes for stability.