@@ -2,7 +2,7 @@ package io.github.leothawne.LTItemMail.module;
 
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
-import java.net.URL;
+import java.net.URI;
 import java.net.URLConnection;
 import java.nio.charset.Charset;
 
@@ -10,7 +10,7 @@ public final class HTTPModule {
 	private HTTPModule() {}
 	public static final String get(final String url) {
 		try {
-			final URLConnection connection = new URL(url).openConnection();
+			final URLConnection connection = URI.create(url).toURL().openConnection();
 			connection.setRequestProperty("User-Agent", "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/72.0.3626.119 Safari/537.36");
 			connection.setUseCaches(false);
 			connection.connect();
